<resources>
    <string name="app_name">Chat Room</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="create">Create</string>
    <string name="logout">Logout</string>
</resources>
